<resources>
    <string name="app_name">Active Bank</string>
    <string name="title">Active Bank</string>
    <string name="settings">Settings</string>
    <string name="chat_title">Active Bank</string>

    <string name="file_provider_authority" translatable="false">com.activeai.MFSDKHybridKitSample.fileprovider</string>

    // Login Screen Strings
    <string name="product">Product</string>
    <string name="location_amp_atm"><![CDATA[Location & ATM]]></string>
    <string name="inbox">Inbox</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="current_rates">Current Rates</string>
    <string name="ask_me">Ask me</string>
    <string name="null_string">null</string>

    // Post Login Screen Strings
    <string name="login_post">Login</string>
    <string name="customer_id_hint">CUSTOMER_ID</string>
    <string name="session_id_hint">SESSION_ID</string>
</resources>
