<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="235dp">

        <RelativeLayout
            android:id="@+id/rl_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:background="@drawable/ic_login_header_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/rl_header_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:layout_marginBottom="-33dp"
            android:background="@drawable/circle_bot_bg_shape"
            android:padding="4dp"
            android:src="@drawable/ic_bot_login"
            android:contentDescription="@string/null_string" />

        <ImageView
            android:id="@+id/iv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:visibility="gone"
            android:src="@drawable/ic_action_settings" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp">

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_product"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button_selector"
                        android:gravity="center"
                        android:text="@string/product"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_location"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="18dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button_selector"
                        android:gravity="center"
                        android:text="@string/location_amp_atm"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll1"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_inbox"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button_selector"
                        android:gravity="center"
                        android:text="@string/inbox"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_contact"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="18dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button_selector"
                        android:gravity="center"
                        android:text="@string/contact"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll2"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_login_post"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button_selector"
                        android:gravity="center"
                        android:text="@string/login_post"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_current_rate"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="18dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button_selector"
                        android:gravity="center"
                        android:text="@string/current_rates"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/askme_button_selector"
            android:padding="12dp"
            android:text="@string/ask_me"
            android:textAllCaps="false"
            android:textColor="@color/headerColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>
</LinearLayout>